# zxbasic-c

./: .gitignore  CLAUDE.md  Makefile  README.md  plan.md
csrc/: CMakeLists.txt  UPSTREAM  VERSION
csrc/build-gcc/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
csrc/build-gcc/common/: Makefile  cmake_install.cmake
csrc/build-gcc/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_ast  test_check  test_cmdline  test_config  test_symboltable  test_types  test_utils
csrc/build-gcc/zxbasm/: Makefile  cmake_install.cmake  zxbasm
csrc/build-gcc/zxbc/: Makefile  cmake_install.cmake  zxbc  zxbc-ply-astcmp  zxbc-ply-lexdump
csrc/build-gcc/zxbc-ast-dump/: Makefile  cmake_install.cmake  zxbc-ast-dump
csrc/build-gcc/zxbpp/: Makefile  cmake_install.cmake  zxbpp
csrc/common/: CMakeLists.txt  arena.c  arena.h  compat.h  config_file.c  config_file.h  getopt_port.h  hashmap.c  hashmap.h  strbuf.c  strbuf.h  utils.c  utils.h  vec.h  ya_getopt.c
csrc/multicall/: CMakeLists.txt  main.c
csrc/scripts/: gen_ply_tables.py  nextbuild-c.py  nextbuild-sweep.sh  ply_tokdump.py  ply_trace_ref.py  sync-upstream.sh
csrc/tests/: .python-upstream-pin  CMakeLists.txt  _find_python.sh  _find_python312.sh  check_meter_green.sh  compare_python_c.sh  compare_python_c_asm.sh  diff_ast_json.py  dump_python_ast.py  phase1_strict_discovery.sh  probe_binary.py  probe_common.py  probe_dim_scalar.py  probe_for.py  probe_let.py  regen_zxbc_baselines.sh  run_cmdline_parity.sh  run_cmdline_tests.sh  run_phase1_calibration.sh  run_phase5_calibration.sh  run_phase6_calibration.sh  run_phase7_calibration.sh  run_semantic_fidelity.sh  run_zxbasm_tests.sh  run_zxbasm_tests_strict.sh  run_zxbc_ast_equiv.sh  run_zxbc_codegen_tests.sh  run_zxbc_full_tests.sh  run_zxbc_omatrix.sh  run_zxbc_outfmt_tests.sh  run_zxbc_stage_validation.sh  run_zxbc_tests.sh  run_zxbpp_tests.sh  run_zxbpp_tests_strict.sh  test_ast.c  test_check.c  test_cmdline.c  test_config.c  test_harness.h  test_symboltable.c  (+4 more)
csrc/tests/ast_equiv_fixtures/: binary_expr_faithful.bas  for_typecast_drifted.bas
csrc/tests/cmdline_parity/: ifdef.bas  t.asm
csrc/tests/codegen_calibration/: calib.bas
csrc/tests/codegen_probes/: run_probes.sh
csrc/tests/codegen_probes/_coverage/: cov_driver.py
csrc/tests/codegen_probes/arithmetic/: ar_const_typecast_widen_leak.bas  ar_div_by_one.bas  ar_div_by_zero_const.bas  ar_div_pow2.bas  ar_fixed_div.bas  ar_long_div_const.bas  ar_mixed_width_byte_uint.bas  ar_mod_by_zero_const.bas  ar_mul_pow2.bas  ar_neg_unsigned.bas  ar_shl_float_lhs.bas  ar_shl_var.bas  asc_string_literal_fold.bas  val_float_overflow.bas
csrc/tests/codegen_probes/arrays/: arr_base1_pragma.bas  arr_dynamic_index.bas  arr_explicit_bounds.bas  arr_initializer.bas  arr_multidim.bas  arr_string_array.bas
csrc/tests/codegen_probes/controlflow/: cf_do_while_exit.bas  cf_for_step_neg.bas  cf_goto_forward.bas  cf_nested_for.bas  cf_on_gosub.bas  cf_on_goto.bas
csrc/tests/codegen_probes/errors/: err_arr_decl_multi.bas  err_array_byval_param.bas  err_assign_array_to_scalar.bas  err_call_nonfunction.bas  err_class_array_as_function.bas  err_class_function_as_var.bas  err_class_var_as_array.bas  err_class_var_as_function.bas  err_code_nonstring.bas  err_const_vector_none_cascade.bas  err_const_vector_ragged.bas  err_continue_out_of_loop.bas  err_default_array_arg.bas  err_define_illegal_char.bas  err_dim_at_multi.bas  err_dim_at_nonconst.bas  err_dim_ini_multi.bas  err_dup_func.bas  err_exit_out_of_loop.bas  err_func_must_return_string.bas  (+23 more)
csrc/tests/semantic_fidelity_fixtures/: dim_scalar_placement.bas  let_typecast_drifted.bas
csrc/tests/zxbc_parse_expected/: 01.err.expected  50.err.expected  51.err.expected  53.err.expected  62.err.expected  REGEN_STAMP  alxinho1.err.expected  array11.err.expected  array_err.err.expected  arrlabels10c.err.expected  arrlabels10d.err.expected  arrlabels11.err.expected  arrlabels11b.err.expected  bad_fname_err0.err.expected  bad_fname_err1.err.expected  bad_fname_err2.err.expected  bad_fname_err4.err.expected  bad_fname_err5.err.expected  bad_fname_err6.err.expected  bad_sigil.err.expected  baspreprocerr1.err.expected  baspreprocerr2.err.expected  bin02.err.expected  callable_err.err.expected  chr.err.expected  chr1.err.expected  const4.err.expected  const5.err.expected  const6.err.expected  const9.err.expected  data0.err.expected  declare1.err.expected  declare2.err.expected  declare3.err.expected  declare4.err.expected  declare5.err.expected  declare6.err.expected  def_func_inline.err.expected  dim_at_init_err.err.expected  dim_const_crash.err.expected  (+97 more)
csrc/zxbasm/: CMakeLists.txt  asm_core.c  asm_instr.c  basic.c  basic.h  expr.c  gensnapshot.c  gensnapshot.h  lexer.c  main.c  memory.c  outfmt_sna.c  outfmt_sna.h  outfmt_tap.c  outfmt_tap.h  outfmt_tzx.c  outfmt_tzx.h  outfmt_z80.c  outfmt_z80.h  parser.c  z80_opcodes.c  z80_opcodes.h  zxbasm.h
csrc/zxbc/: CMakeLists.txt  args.c  args.h  asm_bridge.c  asm_bridge.h  ast.c  backend.c  backend.h  backend_common.c  codegen.c  codegen.h  compiler.c  errmsg.c  errmsg.h  ic.c  ic.h  lexer.c  lexer.h  main.c  options.c  options.h  parser.c  parser.h  pyfloat.c  translator.c  translator.h  types.h  var_translator.c  visitor.c  visitor.h  z80asm.c  z80asm.h  zxbc.h
csrc/zxbc-ast-dump/: CMakeLists.txt  main.c
csrc/zxbc/optimizer/: basicblock.c  cpustate.c  cpustate.h  flowgraph.c  labelsdict.c  omap.c  omap.h  opthelpers.c  opthelpers.h  optimizer.h  optmain.c  optmemcell.c  optmemcell.h
csrc/zxbc/passes/: functiongraph.c  functiongraph.h  optimizer.c  optimizer.h  unreachable.c  unreachable.h
csrc/zxbc/peephole/: engine.c  engine.h  evaluator.c  evaluator.h  memcell.c  memcell.h  opts_embedded.c  opts_embedded.h  parser.c  parser.h  pattern.c  pattern.h  template.c  template.h
csrc/zxbc/plyparser/: ply_astcmp_harness.c  ply_engine.c  ply_engine.h  ply_lexdump_harness.c  ply_tables.c  ply_tables.h  ply_trace_harness.c  productions.tsv
csrc/zxbpp/: CMakeLists.txt  main.c  preproc.c  zxbpp.h
(+113 files in other folders)
